--- a/tic-tac-toe-mini-app/index.html
+++ b/tic-tac-toe-mini-app/index.html
@@ -2,7 +2,6 @@
 <html>
 
   <head>
-    <script src="app.js"></script>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
   </head>
@@ -18,22 +17,24 @@
     <div class="game-div">
       <table style="width:50%">
         <tr>
-          <th>[  ]</th>
-          <th>[  ]</th>
-          <th>[  ]</th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
         </tr>
         <tr>
-          <th>[  ]</th>
-          <th>[  ]</th>
-          <th>[  ]</th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
         </tr>
         <tr>
-          <th>[  ]</th>
-          <th>[  ]</th>
-          <th>[  ]</th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
+          <th><button class="square">[     ]</button></th>
         </tr>
       </table>
     </div>
+
+    <script src="app.js"></script>
 
   </body>
 
