Added Event Listener for Each Square

--- a/tic-tac-toe-mini-app/index.html
+++ b/tic-tac-toe-mini-app/index.html
@@ -17,19 +17,19 @@
     <div class="game-div">
       <table style="width:50%">
         <tr>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
+          <th><button id="top-left">[     ]</button></th>
+          <th><button id="top-center">[     ]</button></th>
+          <th><button id="top-right">[     ]</button></th>
         </tr>
         <tr>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
+          <th><button id="center-left">[     ]</button></th>
+          <th><button id="center-center">[     ]</button></th>
+          <th><button id="center-right">[     ]</button></th>
         </tr>
         <tr>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
-          <th><button class="square">[     ]</button></th>
+          <th><button id="bottom-left">[     ]</button></th>
+          <th><button id="bottom-center">[     ]</button></th>
+          <th><button id="bottom-right">[     ]</button></th>
         </tr>
       </table>
     </div>
